--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@types/node": "^16.11.27",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
-    "grommet": "^2.22.0",
-    "grommet-icons": "^4.7.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
