--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@react-three/fiber": "^8.0.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.15",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "@types/uuid": "^8.3.4",
     "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "three": "^0.140.2",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
