--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/three": "^0.140.0",
     "@types/uuid": "^8.3.4",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
